--- a/SEconfdemoApp/app/src/main/AndroidManifest.xml
+++ b/SEconfdemoApp/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/api_key_google_places" />
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.chat.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
